new streak future part1

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 URL=https://todoserver-fkhk.onrender.com
 # URL=https://us-central1-back-e8f9a.cloudfunctions.net/api
+DBB=https://us-central1-back-e8f9a.cloudfunctions.net/api
