--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 URL=https://todoserver-fkhk.onrender.com
 # URL=https://us-central1-back-e8f9a.cloudfunctions.net/api
-DBB=https://us-central1-back-e8f9a.cloudfunctions.net/api
+# DBB=https://us-central1-back-e8f9a.cloudfunctions.net/api
+DBB=ogtodoserver.onrender.com
